Upated phaser.io slides

--- a/slides/theme/scss/default.scss
+++ b/slides/theme/scss/default.scss
@@ -1126,7 +1126,7 @@ a {
 }
 
 .phaser {
-    background: url('/../images/phaser-logo-small.png') no-repeat center 50px #9FCC6C
+    background: #9FCC6C
 }
 
 p, li, .zig {
